--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,118 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+.Game {
+    display: inline-block;
+    position: relative;
+
+  }
+  
+  .Board {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    margin-bottom: 1rem;
+  }
+  
+  .Square {
+    background: #fff;
+    border: 1px solid #999;
+    float: left;
+    font-size: 56px;
+    font-weight: bold;
+    width: 75px;
+    height: 75px;
+    line-height: 75px;
+    padding: 0;
+    text-align: center;
+  }
+    .Square:nth-child(3n + 1) {
+      border-left: none;
+    }
+  
+    .Square:nth-child(1),
+    .Square:nth-child(2),
+    .Square:nth-child(3) {
+      border-top: none;
+    }
+  
+    .Square:nth-child(3n) {
+      border-right: none;
+    }
+  
+    .Square:nth-child(7),
+    .Square:nth-child(8),
+    .Square:nth-child(9) {
+      border-bottom: none;
+    }
+  
+    .Square:focus {
+      /* Prevent items from overlapping the outline */
+      position: relative;
+    }
+  
+    .Game.Game--winner .Square:focus {
+      outline: none;
+    }
+  
+  
+  .Message {
+    text-align: center;
+  }
+  
+  .Announcement {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  .Announcement h1 {
+      margin: 0.75rem 0;
+    }
+  
+    div {
+      margin-bottom: 0.75rem;
+    }
+  
+  
+  .Button {
+    display: inline-block;
+    border: none;
+    padding: 0.5rem 1rem;
+    margin: 0 0.5rem 0 0;
+    min-width: 5rem;
+    text-decoration: none;
+    background: #0069ed;
+    color: #fff;
+    font-size: 1rem;
+    cursor: pointer;
+    text-align: center;
+    transition: background 250ms ease-in-out, transform 150ms ease;
+  }
+  .Button:last-of-type {
+      margin-right: 0;
+    }
+  
+    .Button:hover,
+    .Button:focus {
+      background: #0053ba;
+    }
+  
+    .Button:focus {
+      outline: 1px solid #fff;
+      outline-offset: -4px;
+    }
+  
+    .Button:active {
+      transform: scale(0.99);
+    }
+  
+  
