--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
-
+.App{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .Game {
     display: inline-block;
     position: relative;
@@ -16,16 +21,18 @@
   
   .Square {
     background: #fff;
-    border: 1px solid #999;
+    border: 2px solid #999;
+    border-radius: 7px;
     float: left;
-    font-size: 56px;
-    font-weight: bold;
-    width: 75px;
-    height: 75px;
-    line-height: 75px;
+    font-size: 85px;
+    width: 175px;
+    height: 175px;
+    line-height: 175px;
     padding: 0;
     text-align: center;
+    color: rgb(58, 58, 58);
   }
+
     .Square:nth-child(3n + 1) {
       border-left: none;
     }
@@ -57,7 +64,14 @@
   
   
   .Message {
+    padding: 0.7rem;
+    margin-top: 3rem;
+    letter-spacing: 2px;
     text-align: center;
+    color: rgb(87, 87, 87);
+    font-size: 30px;
+    border:1px solid rgb(48, 48, 48);
+    border-radius: 5px;
   }
   
   .Announcement {
@@ -71,11 +85,21 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-size: 1.5rem;
+    font-size: 2rem;
     text-align: center;
+    color: rgb(61, 61, 61);
+    
   }
-  .Announcement h1 {
+  .Announcement div{
+    margin-bottom:3rem ;  
+    font-size: 50px; 
+  }
+
+  .Announcement p {
       margin: 0.75rem 0;
+      font-size: 60px;
+      font-weight: 550;
+      animation: winnerSpin 3s infinite;
     }
   
     div {
@@ -86,13 +110,14 @@
   .Button {
     display: inline-block;
     border: none;
-    padding: 0.5rem 1rem;
+    padding: 2rem 5rem;
+    border-radius: 7px;
     margin: 0 0.5rem 0 0;
     min-width: 5rem;
     text-decoration: none;
-    background: #0069ed;
+    background: #2d7944;
     color: #fff;
-    font-size: 1rem;
+    font-size: 1.7rem;
     cursor: pointer;
     text-align: center;
     transition: background 250ms ease-in-out, transform 150ms ease;
@@ -103,16 +128,24 @@
   
     .Button:hover,
     .Button:focus {
-      background: #0053ba;
+      background: #379954;
     }
   
     .Button:focus {
-      outline: 1px solid #fff;
+      outline: none;
       outline-offset: -4px;
     }
   
     .Button:active {
-      transform: scale(0.99);
+      transform: scale(1.2);
     }
   
+    @keyframes winnerSpin {
+        from{
+            transform: rotate(0deg);
+        }
+        to{
+            transform: rotate(360deg);
+        }
+    }
   
